chore(ignore): hide uv files from git for now
Signed-off-by: Laura Santamaria <nimbinatus@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,7 @@ scratch.ipynb
 
 # Ignore config.yaml from the cli
 config.yaml
+
+# uv unless we decide we want it in the future
+pyproject.toml
+uv.lock
