Minor formatting fix
Signed-off-by: julian-cable <jcable@redhat.com>

--- a/compositional_skills/grounded/linguistics/inclusion/cultural_bias/qna.yaml
+++ b/compositional_skills/grounded/linguistics/inclusion/cultural_bias/qna.yaml
@@ -71,7 +71,7 @@ seed_examples:
   - context: Let's get to the nitty-gritty of the situation.
     question: How would you adjust this sentence to use more inclusive, non
       culturally biased terminology?
-    answer: |-
+    answer: >-
       Let's get to the essentials of the situation.
       Avoid this term because of its original association with slavery.
   - context: The document explains how to segregate cluster traffic from management
