--- a/compositional_skills/grounded/linguistics/inclusion/cultural_bias/qna.yaml
+++ b/compositional_skills/grounded/linguistics/inclusion/cultural_bias/qna.yaml
@@ -7,7 +7,7 @@ task_description: You are a member of a team with a mission to create the
   skill helps the writer use more inclusive terminology to avoid cultural bias.
 seed_examples:
   - context: The company is building a team of Black Belts for cloud computing.
-    question: How would you improve this sentence to use more inclusive, non
+    question: How might you improve this sentence to use more inclusive, non
       culturally appropriated IT terminology?
     answer: >-
       The company is building a team of specialists for cloud computing.
@@ -16,7 +16,7 @@ seed_examples:
       certification, use an alternative such as "expert", "certified expert",
       or "specialist".
   - context: Holy cow! That car almost ran into us!
-    question: How would you improve this sentence to use more inclusive, non
+    question: How might you improve this sentence to use more inclusive, non
       religiously biased terminology?
     answer: >-
       Oh my! That car almost ran into us!
@@ -25,7 +25,7 @@ seed_examples:
       religious significance, use an alternative expression such as "oh my"
       or "wow".
   - context: Is the deal kosher?
-    question: How would you adjust this sentence to use more inclusive, non
+    question: How might you adjust this sentence to use more inclusive, non
       religiously biased terminology?
     answer: >-
       Is the deal appropriate?
@@ -34,7 +34,7 @@ seed_examples:
       communities. Use alternative terms, such as "appropriate" or "acceptable".
   - context: A master clock provides time signals to synchronize one or more slave
       clocks as a part of a clock network.
-    question: How would you improve this sentence to use inclusive, non culturally
+    question: How might you improve this sentence to use inclusive, non culturally
       biased IT language?
     answer: >-
       A primary clock provides time signals to synchronize one or more
@@ -46,7 +46,7 @@ seed_examples:
       "parent/child", or other terms as agreed with your stakeholders.
   - context: In database replication, the master database is regarded as the
       authoritative source, and the slave databases are synchronized to it.
-    question: How would you revise this sentence to use inclusive, non culturally
+    question: How might you revise this sentence to use inclusive, non culturally
       biased IT terminology?
     answer: >-
       In database replication, the parent database is regarded as the
@@ -58,7 +58,7 @@ seed_examples:
       "parent/child", or other terms as agreed with your stakeholders.
   - context: Master and worker nodes in an OpenShift Container Platform cluster use
       the CRI-O container engine to run containers.
-    question: How would you rewrite this sentence to use more inclusive, non
+    question: How might you rewrite this sentence to use more inclusive, non
       culturally biased IT terminology?
     answer: >-
       Control plane and compute nodes in an OpenShift Container Platform
@@ -69,14 +69,14 @@ seed_examples:
       code artifact, such as "machines with the 'master' role". Similarly, for
       computers that were formerly known as "worker", refer to them now as "compute".
   - context: Let's get to the nitty-gritty of the situation.
-    question: How would you adjust this sentence to use more inclusive, non
+    question: How might you adjust this sentence to use more inclusive, non
       culturally biased terminology?
     answer: >-
       Let's get to the essentials of the situation.
       Avoid this term because of its original association with slavery.
   - context: The document explains how to segregate cluster traffic from management
       traffic.
-    question: How would you rewrite this sentence to use inclusive, non culturally
+    question: How might you rewrite this sentence to use inclusive, non culturally
       biased IT terminology?
     answer: >-
       The document explains how to separate cluster traffic from management
@@ -87,7 +87,7 @@ seed_examples:
       voting. Use "separate".
   - context: An air-gapped environment ensures security by physical segregation of
       the system or network.
-    question: How would you adjust this sentence to use inclusive, non culturally
+    question: How might you adjust this sentence to use inclusive, non culturally
       biased IT terminology?
     answer: >-
       An air-gapped environment ensures security by physical separation of the
@@ -97,7 +97,7 @@ seed_examples:
       rights by limiting access to privileges and rights such a education and
       voting. Use "separation" or "segmentation".
   - context: Join our tribe to work on this project.
-    question: How would you revise this sentence to use more inclusive, non
+    question: How might you revise this sentence to use more inclusive, non
       culturally biased IT terminology?
     answer: >-
       Join our team to work on this project.
