--- a/compositional_skills/grounded/linguistics/inclusion/ableism/qna.yaml
+++ b/compositional_skills/grounded/linguistics/inclusion/ableism/qna.yaml
@@ -8,7 +8,7 @@ task_description: You are a member of a team with a mission to create the
 seed_examples:
   - context: It is important to consider the blind spots that your organization
       might have.
-    question: How would you improve this sentence to use more inclusive terminology
+    question: How might you improve this sentence to use more inclusive terminology
       to avoid any offence to blind people?
     answer: >-
       It is important to consider the areas of weakness that your organization
@@ -19,7 +19,7 @@ seed_examples:
       ignored", or "area of weakness".
   - context: You could be forgiven for thinking it crazy that Microsoft SQL Server
       runs on Linux.
-    question: How would you improve this sentence to use more inclusive terminology
+    question: How might you improve this sentence to use more inclusive terminology
       to avoid any offence to people with a mental health condition?
     answer: >-
       You could be forgiven for thinking it surprising that Microsoft SQL
@@ -30,7 +30,7 @@ seed_examples:
   - context: The software is crippleware, and some features of the program such as
       printing or the ability to save files are unavailable until the user
       purchases a registration key.
-    question: How would you improve this sentence to use more inclusive terminology
+    question: How might you improve this sentence to use more inclusive terminology
       to avoid any offence to people with disabilities?
     answer: >-
       The software has restricted functions, and some features of the program
@@ -40,7 +40,7 @@ seed_examples:
       Avoid using "cripple", "crippled", or "crippleware" in a computing context.
       These terms are pejorative for people with physical disabilities.
   - context: Avoid a tendency of decision paralysis when deciding on a solution.
-    question: How would you adjust this sentence to use more inclusive terminology
+    question: How might you adjust this sentence to use more inclusive terminology
       to avoid any offence to people with disabilities?
     answer: >-
       Avoid a tendency of overanalyzing or overthinking when deciding on a
@@ -50,7 +50,7 @@ seed_examples:
       to taking too long to decide on a solution, such as "overanalyzing", "overthinking",
       or "indecision".
   - context: Get the product at an insanely low price!
-    question: How would you adjust this sentence to use more inclusive terminology
+    question: How might you adjust this sentence to use more inclusive terminology
       to avoid any offence to people with a mental health condition?
     answer: >-
       Get the product at an unusually low price!
@@ -60,7 +60,7 @@ seed_examples:
       in a positive sense; or conversely in a negative sense to refer to an attempt to
       discredit or criticize particular ideas, beliefs, principles, or attitudes.
   - context: Run a sanity check on the software.
-    question: How would you rewrite this sentence to use more inclusive terminology
+    question: How might you rewrite this sentence to use more inclusive terminology
       to avoid any offence to neurodiverse people?
     answer: >-
       Validate the software.
@@ -70,7 +70,7 @@ seed_examples:
       you mean. Consider alternatives such as using "check" alone, or "validate",
       "verify", "quick check", "coherence check", or "confidence check".
   - context: Run a sanity test on the software.
-    question: How would you improve this sentence to use more inclusive terminology
+    question: How might you improve this sentence to use more inclusive terminology
       to avoid any offence to neurodiverse people?
     answer: >-
       Test the software.
