--- a/compositional_skills/grounded/linguistics/inclusion/superlatives/qna.yaml
+++ b/compositional_skills/grounded/linguistics/inclusion/superlatives/qna.yaml
@@ -8,7 +8,7 @@ task_description: You are a member of a team with a mission to create the
   superlatives.
 seed_examples:
   - context: Felix Brough is a technology evangelist.
-    question: How would you improve this sentence to use more inclusive wording to
+    question: How might you improve this sentence to use more inclusive wording to
       avoid religious connotations?
     answer: >-
       Felix Brough is a technology advocate.
@@ -18,7 +18,7 @@ seed_examples:
       be disturbing to some people.
   - context: Train your teams on DevOps culture so they can evangelize your
       automation technology quickly.
-    question: How would you rewrite this sentence to use more inclusive wording to
+    question: How might you rewrite this sentence to use more inclusive wording to
       avoid religious connotations?
     answer: >-
       Train your teams on DevOps culture so they can encourage adoption of
@@ -28,7 +28,7 @@ seed_examples:
       adoption of". The term "evangelize" is outdated and has religious connotations
       that might be disturbing to some people.
   - context: She has worked for the past four years as a senior automation guru.
-    question: How would you adjust this sentence to use more inclusive wording to
+    question: How might you adjust this sentence to use more inclusive wording to
       avoid superlatives or religious connotations?
     answer: >-
       She has worked for the past four years as a senior automation
@@ -37,7 +37,7 @@ seed_examples:
       Avoid superlatives in job titles and descriptions. Avoid appropriating
       religious terms.
   - context: The following tips are provided for storage ninjas.
-    question: How would you reword this sentence to use more inclusive wording to
+    question: How might you reword this sentence to use more inclusive wording to
       avoid superlatives or cultural appropriation?
     answer: >-
       The following tips are provided for storage experts.
@@ -45,7 +45,7 @@ seed_examples:
       Avoid superlatives in job titles and descriptions. Avoid appropriating
       cultural terms.
   - context: The company is looking for a rockstar Python programmer.
-    question: How would you rewrite this sentence to use more inclusive wording to
+    question: How might you rewrite this sentence to use more inclusive wording to
       avoid superlatives?
     answer: >-
       The company is looking for a Python programmer with n years of experience.
