--- a/compositional_skills/grounded/linguistics/inclusion/offensive/qna.yaml
+++ b/compositional_skills/grounded/linguistics/inclusion/offensive/qna.yaml
@@ -8,7 +8,7 @@ task_description: You are a member of a team with a mission to create the
   language.
 seed_examples:
   - context: You can abort a running task by pressing Ctrl+C.
-    question: How would you modify this sentence to use more inclusive IT terminology?
+    question: How might you modify this sentence to use more inclusive IT terminology?
     answer: >-
       You can end a running task by pressing Ctrl+C.
 
@@ -16,7 +16,7 @@ seed_examples:
       Otherwise, replace it with an alternative such as "cancel", "stop", "end",
       or "fail".
   - context: The manager decided to abort the project.
-    question: How would you modify this sentence to use more inclusive IT Terminology?
+    question: How might you modify this sentence to use more inclusive IT Terminology?
     answer: >-
       The manager decided to stop the project.
 
@@ -25,7 +25,7 @@ seed_examples:
       or "fail".
   - context: The kernel component contains the main binary files and ancillary
       utilities.
-    question: How would you modify this sentence to use more inclusive terminology?
+    question: How might you modify this sentence to use more inclusive terminology?
     answer: >-
       The kernel component contains the main binary files and auxiliary
       utilities.
@@ -34,7 +34,7 @@ seed_examples:
       Use an alternative such as "auxiliary", "supplementary", "supporting",
       "subordinate", or "subsidiary".
   - context: A cabal was set up to investigate and report on the matter.
-    question: How would you reword this sentence to use more inclusive, less
+    question: How might you reword this sentence to use more inclusive, less
       offensive terminology?
     answer: >-
       A working group was set up to investigate and report on the matter.
@@ -43,7 +43,7 @@ seed_examples:
       Do not use "cabal"; use alternative terms to refer to a group of people.
   - context: The project team scheduled a session for grooming the product backlog
       to prioritize tasks for the next sprint.
-    question: How would you rewrite this sentence to use more inclusive, less
+    question: How might you rewrite this sentence to use more inclusive, less
       offensive terminology?
     answer: >-
       The project team scheduled a session for refining the product backlog to
