--- a/compositional_skills/grounded/support_copilot/sa_inquiry/qna.yaml
+++ b/compositional_skills/grounded/support_copilot/sa_inquiry/qna.yaml
@@ -1,5 +1,6 @@
+---
 version: 2
-task_description: "Find the Solutions Architect (SA) assigned to a support ticket from the Eco Pool."
+task_description: "Find the Solutions Architect (SA) assigned to a ticket."
 created_by: mivankovich-redhat
 seed_examples:
   - context: |
