--- a/knowledge/miscellaneous_unknown/economy/qna.yaml
+++ b/knowledge/miscellaneous_unknown/economy/qna.yaml
@@ -1,6 +1,6 @@
 version: 3
 created_by: patriciaong08
-domain: economics
+domain: economy
 seed_examples:
   - context: |
       Use of Payment Organizations' Brands. This section outlines the guidelines for using trademarks of payment organizations (e.g., Visa, Mastercard, American Express) in merchant locations, catalogs, websites, and promotional materials. It includes dos and don’ts, such as prominently displaying trademarks, using official formats, and avoiding actions that imply endorsement or diminish goodwill.
